--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -1,7 +1,6 @@
 .post {
   width: 100%;
   padding: 20px 20px 10px 20px;
-  border: solid 3px $primary;
   border-radius: 10px;
   height: fit-content;
   background-color: $light;
@@ -9,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
-  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  box-shadow: $box-shadow;
   margin-bottom: 20px;
 
   .post-header {
