--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -67,12 +67,12 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center mr-20">
             <a href="/">
-              <%=cl_image_tag("development/assets/2gather_logo.png", :height=>40, :quality=>"auto:low", :crop=>"scale")%>
+              <%=cl_image_tag("assets/2gather_logo.png", :height=>40, :quality=>"auto:low", :crop=>"scale")%>
             </a>
           </div>
 
-          <div class="hidden sm:ml-6 sm:block flex align-center">
-            <div class="flex space-x-4">
+          <div class="hidden sm:ml-6 sm:flex items-center">
+            <div class="flex space-x-4 items-center ">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <a class="text-primary font-medium" href="/">Home</a>
               <a class="text-primary font-medium" href="/clubs">Clubs</a>
@@ -84,7 +84,7 @@
           <button type="button" class="relative rounded-full bg-yellow p-1 text-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
             <span class="absolute -inset-1.5"></span>
             <span class="sr-only">View notifications</span>
-            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+            <svg class="h-6 w-6 " fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
             </svg>
           </button>
